tests/dataset/tpc-ds/compiler/c/q30.error
/tmp/q30.c: In function ‘test_TPCDS_Q30_simplified’:
/tmp/q30.c:319:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  319 |   if (test_TPCDS_Q30_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/q30.c:323:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  323 |       if (test_TPCDS_Q30_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/q30.c: In function ‘main’:
/tmp/q30.c:383:35: warning: implicit declaration of function ‘avg_by_state_item_list_t_create’ [-Wimplicit-function-declaration]
  383 |   avg_by_state_item_list_t tmp9 = avg_by_state_item_list_t_create(tmp8.len);
      |                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q30.c:383:35: error: invalid initializer
/tmp/q30.c:388:9: warning: implicit declaration of function ‘customer_total_return_item_list_t_create’ [-Wimplicit-function-declaration]
  388 |         customer_total_return_item_list_t_create(_gp.items.len);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q30.c:388:9: error: invalid initializer
/tmp/q30.c:411:30: warning: implicit declaration of function ‘result_item_list_t_create’ [-Wimplicit-function-declaration]
  411 |   result_item_list_t tmp16 = result_item_list_t_create(
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q30.c:412:62: error: ‘(customer_t *)&customer’ is a pointer; did you mean to use ‘->’?
  412 |       customer_total_return.len * avg_by_state.len * customer.len);
      |                                                              ^
      |                                                              ->
/tmp/q30.c:448:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  448 |     _json_string(it.c_customer_id);
      |                  ~~^~~~~~~~~~~~~~
/tmp/q30.c:73:32: note: expected ‘char *’ but argument is of type ‘const char *’
   73 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/q30.c:452:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  452 |     _json_string(it.c_first_name);
      |                  ~~^~~~~~~~~~~~~
/tmp/q30.c:73:32: note: expected ‘char *’ but argument is of type ‘const char *’
   73 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/q30.c:456:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  456 |     _json_string(it.c_last_name);
      |                  ~~^~~~~~~~~~~~
/tmp/q30.c:73:32: note: expected ‘char *’ but argument is of type ‘const char *’
   73 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/q30.c:464:38: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  464 |   test_TPCDS_Q30_simplified_result = result;
      |                                      ^~~~~~
